--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/multimedia.html">Multimedia</a>
+                    <a class="nav-link" href="pages/multimedia.html">Multimedia</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./pages/noticias.html">Noticias</a>
