se agrega extend, mixin e include

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
     <title>Morbi2</title>
+    <meta name="description" content="Reseñas, mejores y peores escenas, y datos extras de tus películas favoritas">
+    <meta name="keywords"
+        content="Morbius, reseña morbius, escenas morbius, morbintime, actores morbius, Jared Leto, letra ekse">
 </head>
 
 <body>
@@ -115,21 +118,41 @@
             <div class="lista1 col-xs-12 col-lg-6">
                 <h2>Mejores morbiescenas</h2>
                 <ol>
-                    <li>Milo morbibailando su baile de apareamiento</li>
-                    <li>Kamehameha de murciélagos</li>
-                    <li>Dr. Michael Morbius repara una máquina de vida(?) con el resorte de un bolígrafo</li>
-                    <li>Morbibatalla en el metro</li>
-                    <li>Morbibeso</li>
+                    <div class="btn--lis1">
+                        <li>Milo morbibailando su baile de apareamiento</li>
+                    </div>
+                    <div class="btn--lis2">
+                        <li>Kamehameha de murciélagos</li>
+                    </div>
+                    <div class="btn--lis3">
+                        <li>Dr. Michael Morbius repara una máquina de vida(?) con el resorte de un bolígrafo</li>
+                    </div>
+                    <div class="btn--lis4">
+                        <li>Morbibatalla en el metro</li>
+                    </div>
+                    <div class="btn--lis5">
+                        <li>Morbibeso</li>
+                    </div>
                 </ol>
             </div>
             <div class="lista2 col-xs-12 col-lg-6">
                 <h2>Peores morbiescenas</h2>
                 <ol>
-                    <li>Milo morbibailando su baile de apareamiento</li>
-                    <li>Kamehameha de murciélagos</li>
-                    <li>Dr. Michael Morbius repara una máquina de vida(?) con el resorte de un bolígrafo</li>
-                    <li>Morbibatalla en el metro</li>
-                    <li>Morbibeso</li>
+                    <div class="btn--lis1">
+                        <li>Milo morbibailando su baile de apareamiento</li>
+                    </div>
+                    <div class="btn--lis2">
+                        <li>Kamehameha de murciélagos</li>
+                    </div>
+                    <div class="btn--lis3">
+                        <li>Dr. Michael Morbius repara una máquina de vida(?) con el resorte de un bolígrafo</li>
+                    </div>
+                    <div class="btn--lis4">
+                        <li>Morbibatalla en el metro</li>
+                    </div>
+                    <div class="btn--lis5">
+                        <li>Morbibeso</li>
+                    </div>
                 </ol>
             </div>
         </div>
