--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
-    <title>Morbi2</title>
+    <title>Morbi Multimedia</title>
+    <meta name="description" content="Imágenes de las escenas, poster promocionales, actores y el trailo nunca antes visto">
+    <meta name="keywords" content="Morbius, morbintime, imágenes, fotografías, trailer">
 </head>
 
 <body>
