--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 </head>
 
 <body>
-    <!--barra inicio-->
+    <!--Barra inicio-->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
         <!-- Brand -->
-        <!--logo inicio-->
+        <!--Logo inicio-->
         <a class="navbar-brand" href="#">
             <div class="logo">
                 Morbi<span class="logo_2">us</span><span class="logo_3">2</span>
             </div>
         </a>
-        <!--logo fin-->
+        <!--Logo fin-->
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -58,8 +58,9 @@
             </ul>
         </div>
     </nav>
-    <!--barra fin-->
-    <!--peliculas up inicio-->
+    <!--Barra fin-->
+
+    <!--Peliculas up inicio-->
     <section class="container-fluid peliculas">
         <div class="row">
             <div class="pelicula1 col-3">
@@ -80,8 +81,9 @@
             </div>
         </div>
     </section>
-    <!--peliculas up fin-->
-    <!--jumbotron inicia-->
+    <!--Peliculas up fin-->
+
+    <!--Jumbotron inicia-->
     <section class="container-fluid jumbotronPadre">
         <div class="jumbotron">
             <h1>Morbidos</h1>
@@ -89,7 +91,8 @@
             <button type="button" class="btn btn-success">Metamorbiosis</button>
         </div>
     </section>
-    <!--jumbotron fin-->
+    <!--Jumbotron fin-->
+
     <!--Reseña inicio-->
     <section class="container-fluid indexReseña">
         <div class="row">
@@ -112,6 +115,7 @@
         </div>
     </section>
     <!--Reseña fin-->
+
     <!--Listas inicio-->
     <section class="container-fluid indexListas">
         <div class="row">
@@ -158,6 +162,7 @@
         </div>
     </section>
     <!--Listas fin-->
+
     <!--Canción y tabla inicio-->
     <section class="container-fluid indexMorbicancion_tabla">
         <div class="row">
@@ -292,6 +297,7 @@
         </div>
     </section>
     <!--Canción y tabla fin-->
+
     <!--Peliculas down inicio-->
     <section class="container-fluid peliculas">
         <div class="row">
@@ -314,6 +320,7 @@
         </div>
     </section>
     <!--Peliculas down fin-->
+
     <!--Footer inicio-->
     <footer id="footer" class="bg-dark text-center text-white">
         <!-- Grid container -->
