--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="short cut icon" href="multimedia/Logo/rodaje.png">
+    <link rel="short cut icon" href="../multimedia/Logo/rodaje.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,12 +13,13 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
     <title>Morbi Multimedia</title>
-    <meta name="description" content="Imágenes de las escenas, poster promocionales, actores y el trailo nunca antes visto">
+    <meta name="description"
+        content="Imágenes de las escenas, poster promocionales, actores y el trailer nunca antes visto">
     <meta name="keywords" content="Morbius, morbintime, imágenes, fotografías, trailer">
 </head>
 
 <body>
-    <!--barra inicio-->
+    <!--Barra inicio-->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
         <!-- Brand -->
         <!--logo inicio-->
@@ -57,9 +58,9 @@
             </ul>
         </div>
     </nav>
-    <!--barra fin-->
+    <!--Barra fin-->
 
-    <!--peliculas up inicio-->
+    <!--Peliculas up inicio-->
     <section class="container-fluid peliculas">
         <div class="row">
             <div class="pelicula1 col-3">
@@ -80,9 +81,9 @@
             </div>
         </div>
     </section>
-    <!--peliculas up fin-->
+    <!--Peliculas up fin-->
 
-    <!--inicio carrusel imagenes promocionales-->
+    <!--Inicio carrusel imagenes promocionales-->
     <section class="container-fluid multimediaCarrusel">
         <div class="row">
             <div class="col-xs-8">
@@ -119,8 +120,9 @@
             </div>
         </div>
     </section>
-    <!--fin carrusel imagenes promocionales-->
-    <!--inicio imagenes escenas-->
+    <!--Fin carrusel imagenes promocionales-->
+
+    <!--Inicio imagenes escenas-->
     <section class="container-fluid multimediaEscenas">
         <h2>Morbiescenas</h2>
         <div class="row">
@@ -132,8 +134,9 @@
                     class="img-fluid"></div>
         </div>
     </section>
-    <!--fin imagenes escenas-->
-    <!--inicio imagenes reparto-->
+    <!--Fin imagenes escenas-->
+
+    <!--Inicio imagenes reparto-->
     <section class="container-fluid multimediaReparto">
         <h2>Reparto</h2>
         <div class="row">
@@ -145,8 +148,9 @@
                     class="img-fluid"></div>
         </div>
     </section>
-    <!--fin imagenes reparto-->
-    <!--inicio video-->
+    <!--Fin imagenes reparto-->
+
+    <!--Inicio video-->
     <section class="container-fluid multimediaVideo">
         <h2>Teaser promocional Morbius 2</h2>
         <p>Reacción 100% real al tráiler de Morbius 2</p>
@@ -159,7 +163,8 @@
             </div>
         </div>
     </section>
-    <!--fin video-->
+    <!--Fin video-->
+
     <!--Peliculas down inicio-->
     <section class="container-fluid peliculas">
         <div class="row">
