--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="short cut icon" href="multimedia/Logo/rodaje.png">
+    <link rel="short cut icon" href="../multimedia/Logo/rodaje.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
-    <title>Morbi2</title>
+    <title>Morbi Noticias</title>
+    <meta name="description" content="Las últimas noticias y lo que no sabías sobre tus películas favoritas">
+    <meta name="keywords" content="Morbius, morbintime, noticias, información, eventos, espectáculo">
 </head>
 
 <body>
-    <!--barra inicio-->
+    <!--Barra inicio-->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
         <!-- Brand -->
         <!--logo inicio-->
@@ -55,34 +57,36 @@
             </ul>
         </div>
     </nav>
-    <!--barra fin-->
+    <!--Barra fin-->
 
-    <!--peliculas up inicio-->
+    <!--Peliculas up inicio-->
     <section class="container-fluid peliculas">
         <div class="row">
             <div class="pelicula1 col-3">
                 <h4>1.1/10</h4>
-                <img src="../multimedia/Peliculas/1 m.jpg" alt="Mujer maravilla" class="img-fluid">
+                <img src="../multimedia/peliculas/1 m.jpg" alt="Mujer maravilla" class="img-fluid">
             </div>
             <div class="pelicula2 col-3">
                 <h4>1.2/10</h4>
-                <img src="../multimedia/Peliculas/2 m.jpg" alt="Justice League" class="img-fluid">
+                <img src="../multimedia/peliculas/2 m.jpg" alt="Justice League" class="img-fluid">
             </div>
             <div class="pelicula3 col-3">
                 <h4>2.0/10</h4>
-                <img src="../multimedia/Peliculas/3 m.jpg" alt="Muerte en el Nilo" class="img-fluid">
+                <img src="../multimedia/peliculas/3 m.jpg" alt="Muerte en el Nilo" class="img-fluid">
             </div>
             <div class="pelicula4 col-3">
                 <h4>2.1/10</h4>
-                <img src="../multimedia/Peliculas/4 m.jpg" alt="Jurassica world" class="img-fluid">
+                <img src="../multimedia/peliculas/4 m.jpg" alt="Jurassica world" class="img-fluid">
             </div>
         </div>
     </section>
-    <!--peliculas up fin-->
+    <!--Peliculas up fin-->
+
     <!--Noticias inicio-->
     <section class="container-fluid noticias">
         <div class="row">
             <div class="noticia1 col-xs-12 col-lg-6">
+                <h3>Morbius llegará a streamings</h3>
                 <p>"Morbius | ¿Dónde se puede ver por streaming y a qué plataforma llega la película de Jared Leto?"</p>
                 <br>
                 <img width="200px" src="../multimedia/noticias/morbiusnetflix.jpg" alt="morbiusnetflix"><br>
@@ -90,6 +94,7 @@
                     target="_blank">Ir a noticia</a>
             </div>
             <div class="noticia2 col-xs-12 col-lg-6">
+                <h3>Morbius demuestra su valía</h3>
                 <p>"Los memes no bastaron para que Sony pudiese mejorar la recaudación de Morbius con su reestreno"</p>
                 <br>
                 <img width="200px" src="../multimedia/noticias/sadmorbius.jpg" alt="sadmorbius"><br>
@@ -99,6 +104,7 @@
         </div>
         <div class="row">
             <div class="noticia3 col-xs-12 col-lg-6">
+                <h3>Morbilegal</h3>
                 <p>Morbius se convirtió en un inesperado éxito de piratería en Twitch</p>
                 <br>
                 <img width="200px" src="../multimedia/noticias/morbiuspirata.jpg" alt="morbiuspirata"><br>
@@ -106,6 +112,7 @@
                     target="_blank">Ir a noticia</a>
             </div>
             <div class="noticia4 col-xs-12 col-lg-6">
+                <h3>Morbintime!!</h3>
                 <p>'It's Morbin Time!', el fenómeno que ha causado la película de Morbius</p>
                 <br>
                 <img width="200px" src="../multimedia/noticias/itsmorbintime.jpg" alt="itsmorbintime"><br>
@@ -114,6 +121,8 @@
             </div>
         </div>
     </section>
+    <!--Noticias fin-->
+
     <!--Peliculas down inicio-->
     <section class="container-fluid peliculas">
         <div class="row">
