--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -9,70 +9,194 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
-    <title>Morbi2</title>
+    <title>Quienes Morbi Somos</title>
+    <meta name="description" content="Quienes somos, donde encontrarnos y contactarnos">
+    <meta name="keywords" content="Morbius, morbintime, gerente, administrador, grupo de trabajo, dirección, mapa">
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            Morbi<span class="logo_2">us</span><span class="logo_3">2</span>
-        </div>
-        <nav class="barra">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="multimedia.html">Multimedia</a></li>
-                <li><a href="noticias.html">Noticias</a></li>
-                <li><a href="quienes_somos.html">Quiénes somos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="#abajo"><em>Ir abajo</em></a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="quienesSomos">
-        <div class="quienesSomos_imagen1"></div>
-        <div class="quienesSomos_quienesSomos">
-            <h2>¿Quiénes somos?</h2>
-            <p>Por ahora somos una página para fans de la película Morbius, pero aspiramos a evolucionar en un foro
-                abierto <br> para reseñas y recomendaciones de cosas que nos gusten, ya sean películas, juegos,
-                series, música,etc...</p>
+    <!--Barra inicio-->
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+        <!-- Brand -->
+        <!--logo inicio-->
+        <a class="navbar-brand" href="#">
+            <div class="logo">
+                Morbi<span class="logo_2">us</span><span class="logo_3">2</span>
             </div>
-        <div class="quienesSomos_directiva">
-            <h2>Directiva</h2>
-            <dl>
-                <dt><strong>CEO:</strong></dt>
-                <dd>Nicolas Medrano Soto</dd>
+        </a>
+        <!--logo fin-->
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <dt><strong>Marketing:</strong></dt>
-                <dd>Ignacio Madariaga Valenzuela</dd>
-
-                <dt><strong>Periodista:</strong></dt>
-                <dd>Tatiana Tejos Gerbier</dd>
-
-            </dl>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/multimedia.html">Multimedia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/noticias.html">Noticias</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/quienes_somos.html">Quiénes somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#footer">Ir abajo</a>
+                </li>
+            </ul>
         </div>
-        <div class="quienesSomos_dondenosencontramos">
-            <h2>¿Dónde nos encontramos?</h2>
-            <p>Estado 52, Santiago, Región Metropolitana.</p>
-            <iframe width="200px"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.261631415336!2d-70.65132048472924!3d-33.44248958077617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5a104cfbee5%3A0xc76e76f19f79f5a3!2sMama%20Rockers!5e0!3m2!1ses-419!2scl!4v1655742494280!5m2!1ses-419!2scl"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </nav>
+    <!--Barra fin-->
+
+    <!--Peliculas up inicio-->
+    <section class="container-fluid peliculas">
+        <div class="row">
+            <div class="pelicula1 col-3">
+                <h4>1.1/10</h4>
+                <img src="../multimedia/peliculas/1 m.jpg" alt="Mujer maravilla" class="img-fluid">
+            </div>
+            <div class="pelicula2 col-3">
+                <h4>1.2/10</h4>
+                <img src="../multimedia/peliculas/2 m.jpg" alt="Justice League" class="img-fluid">
+            </div>
+            <div class="pelicula3 col-3">
+                <h4>2.0/10</h4>
+                <img src="../multimedia/peliculas/3 m.jpg" alt="Muerte en el Nilo" class="img-fluid">
+            </div>
+            <div class="pelicula4 col-3">
+                <h4>2.1/10</h4>
+                <img src="../multimedia/peliculas/4 m.jpg" alt="Jurassica world" class="img-fluid">
+            </div>
         </div>
-        <div class="quienesSomos_imagen2"></div>
     </section>
-    <footer class="footer">
-        <p>No tenemos los morbiderechos
-            Télefono:+56938822693 Email:nico.kanario@gmail.com</p>
-        <div class="redes">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+    <!--Peliculas up fin-->
+
+    <!--Quienes somos inicio-->
+    <section class="container-fluid quienesSomos">
+        <div class="row">
+            <div class="quienesSomos_quienesSomos col-lg-6">
+                <h2>¿Quiénes somos?</h2>
+                <p>Por ahora somos una página para fans de la película Morbius, pero aspiramos a evolucionar en un foro
+                    abierto <br> para reseñas y recomendaciones de cosas que nos gusten, ya sean películas, juegos,
+                    series, música,etc...</p>
+            </div>
+
+            <!--Directiva inicio-->
+            <div class="quienesSomos_directiva col-lg-6">
+                <h2>Directiva</h2>
+                <dl>
+                    <dt><strong>CEO:</strong></dt>
+                    <dd>Nicolas Medrano Soto</dd>
+
+                    <dt><strong>Marketing:</strong></dt>
+                    <dd>Ignacio Madariaga Valenzuela</dd>
+
+                    <dt><strong>Periodista:</strong></dt>
+                    <dd>Tatiana Tejos Gerbier</dd>
+                </dl>
+            </div>
+            <!--Directiva fin-->
+
+            <!--Donde nos encontramos inicio-->
+            <div class="quienesSomos_dondenosencontramos col-lg-6">
+                <h2>¿Dónde nos encontramos?</h2>
+                <p>Estado 52, Santiago, Región Metropolitana.</p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.261631415336!2d-70.65132048472924!3d-33.44248958077617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5a104cfbee5%3A0xc76e76f19f79f5a3!2sMama%20Rockers!5e0!3m2!1ses-419!2scl!4v1655742494280!5m2!1ses-419!2scl"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <!--Donde nos encontramos fin-->
         </div>
-        <div>
-            <a href="#" class="subir"><i class="fa-solid fa-circle-chevron-up"></i></a>
+    </section>
+    <!--Quienes somos fin-->
+
+    <!--Peliculas down inicio-->
+    <section class="container-fluid peliculas">
+        <div class="row">
+            <div class="pelicula5 col-3">
+                <h4>3.0/10</h4>
+                <img src="../multimedia/Peliculas/5 m.jpg" alt="Los crimenes de Grindelwald" class="img-fluid">
+            </div>
+            <div class="pelicula6 col-3">
+                <h4>3.1/10</h4>
+                <img src="../multimedia/Peliculas/6 m.jpg" alt="Star wars 9" class="img-fluid">
+            </div>
+            <div class="pelicula7 col-3">
+                <h4>3.4/10</h4>
+                <img src="../multimedia/Peliculas/7 m.jpg" alt="La momia" class="img-fluid">
+            </div>
+            <div class="pelicula8 col-3">
+                <h4>3.5/10</h4>
+                <img src="../multimedia/Peliculas/8 m.jpg" alt="Baywatch" class="img-fluid">
+            </div>
         </div>
+    </section>
+    <!--Peliculas down fin-->
+
+    <!--Footer inicio-->
+    <footer id="footer" class="bg-dark text-center text-white">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <!-- Section: Social media -->
+            <section class="mb-4">
+                <!-- Facebook -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-facebook-f"></i></a>
+
+                <!-- Twitter -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-twitter"></i></a>
+
+                <!-- Google -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-google"></i></a>
+
+                <!-- Instagram -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-instagram"></i></a>
+
+                <!-- Linkedin -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-linkedin-in"></i></a>
+
+                <!-- Github -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-github"></i></a>
+            </section>
+            <!-- Section: Social media -->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2022 No hay morbiderechos.
+        </div>
+        <!-- Copyright -->
     </footer>
+    <!--Footer fin-->
+
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
