afinamiento ruta imágenes

--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -127,19 +127,19 @@
         <div class="row">
             <div class="pelicula5 col-3">
                 <h4>3.0/10</h4>
-                <img src="../multimedia/Peliculas/5 m.jpg" alt="Los crimenes de Grindelwald" class="img-fluid">
+                <img src="../multimedia/peliculas/5 m.jpg" alt="Los crimenes de Grindelwald" class="img-fluid">
             </div>
             <div class="pelicula6 col-3">
                 <h4>3.1/10</h4>
-                <img src="../multimedia/Peliculas/6 m.jpg" alt="Star wars 9" class="img-fluid">
+                <img src="../multimedia/peliculas/6 m.jpg" alt="Star wars 9" class="img-fluid">
             </div>
             <div class="pelicula7 col-3">
                 <h4>3.4/10</h4>
-                <img src="../multimedia/Peliculas/7 m.jpg" alt="La momia" class="img-fluid">
+                <img src="../multimedia/peliculas/7 m.jpg" alt="La momia" class="img-fluid">
             </div>
             <div class="pelicula8 col-3">
                 <h4>3.5/10</h4>
-                <img src="../multimedia/Peliculas/8 m.jpg" alt="Baywatch" class="img-fluid">
+                <img src="../multimedia/peliculas/8 m.jpg" alt="Baywatch" class="img-fluid">
             </div>
         </div>
     </section>
